--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,8 +11,32 @@ body {
 
 main {
     background-color: white;
-    width: 500px;
+    width: 560px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.418);
+}
+
+h1 {
+    font-size: 2em;
+    color: rgb(125, 11, 233);
+}
+
+h2{
+    font-size: 1.5em;
+    color: rgba(153, 65, 235, 0.788);
+}
+
+img.lado{
+    float: right;
+}
+
+a{
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover{
+    text-decoration: underline;
+
 }
